<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.3.5.RELEASE</version>
    </parent>

    <groupId>org.example</groupId>
    <artifactId>Onboarding</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <java.version>11</java.version>

        <jackson.version>2.11.3</jackson.version>
        <tag>unit</tag>

<!--        &lt;!&ndash; Plugins &ndash;&gt;-->
<!--        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>-->
<!--        <maven.compiler.source>1.11</maven.compiler.source>-->
<!--        <maven.compiler.target>1.11</maven.compiler.target>-->
        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
<!--        <maven.antrun.plugin.version>3.0.0</maven.antrun.plugin.version>-->

<!--        &lt;!&ndash; region Studio Clients &ndash;&gt;-->
<!--        &lt;!&ndash; Infra clients &ndash;&gt;-->
<!--        <infra.clients.version>0.0.14</infra.clients.version>-->
<!--        &lt;!&ndash; endregion &ndash;&gt;-->
<!--        &lt;!&ndash; Libraries &ndash;&gt;-->
<!--        <junit-jupiter.version>5.7.0</junit-jupiter.version>-->
<!--        <junit-platform.version>1.7.0</junit-platform.version>-->
<!--        <fasterxml.jackson.version>2.11.3</fasterxml.jackson.version>-->
        <openfeign-version>2.2.5.RELEASE</openfeign-version>
<!--        <infra-tests.version>4.1.3</infra-tests.version>-->
<!--        <swagger-annotations.version>1.5.9</swagger-annotations.version>-->
<!--        <swagger-annotations-v3.version>2.0.6</swagger-annotations-v3.version>-->
<!--        <gson.version>2.8.5</gson.version>-->
<!--        <gson-fire.version>1.8.0</gson-fire.version>-->
<!--        <threetenbp.version>1.3.5</threetenbp.version>-->
<!--        <rest-assured.version>3.0.0</rest-assured.version>-->
<!--        <okhttp.version>2.7.5</okhttp.version>-->
<!--        <appache-commons.version>3.11</appache-commons.version>-->
<!--        <jupiter-extensions.version>0.0.6</jupiter-extensions.version>-->
        <allure-junit5.version>2.13.6</allure-junit5.version>
        <allure-maven.version>2.10.0</allure-maven.version>
<!--        <awaitility.version>4.0.3</awaitility.version>-->
<!--        <okhttp.feign.version>11.0</okhttp.feign.version>-->
<!--        <open.csv.version>5.2</open.csv.version>-->
<!--        <okio.version>2.9.0</okio.version>-->
<!--        <jsoup.version>1.11.2</jsoup.version>-->
<!--        <xsoup.version>0.3.1</xsoup.version>-->
<!--        <html.reporter.version>2.1</html.reporter.version>-->
<!--        <aspectj.version>1.9.6</aspectj.version>-->
<!--        <report.portal.extension.version>5.0.2</report.portal.extension.version>-->
<!--        <report.portal.logger.version>5.0.3</report.portal.logger.version>-->
    </properties>

        <build>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <release>11</release>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <argLine>
                            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                            --illegal-access=permit
                        </argLine>
                        <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
                        <groups>${tag}</groups>
                        <properties>
                            <property>
                                <name>listener</name>
                                <value>io.qameta.allure.junit5.AllureJunit5</value>
                            </property>
                        </properties>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.aspectj</groupId>
                            <artifactId>aspectjweaver</artifactId>
                            <version>${aspectj.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>io.qameta.allure</groupId>
                    <artifactId>allure-maven</artifactId>
                    <version>${allure-maven.version}</version>
                    <configuration>
                        <allureDownloadUrl>
                            https://repo1.maven.org/maven2/io/qameta/allure/allure-commandline/${allure-junit5.version}/allure-commandline-${allure-junit5.version}.zip
                        </allureDownloadUrl>
                        <installDirectory>${project.build.directory}</installDirectory>
                        <reportDirectory>${project.build.directory}/allure-report</reportDirectory>
                    </configuration>
                </plugin>
            </plugins>
        </build>

    <dependencies>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-openfeign</artifactId>
            <version>${openfeign-version}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jackson.version}</version>
        </dependency>
    </dependencies>
</project>